test/test-files/analyzer/builtins/error-printf-too-many-args/exception.out
Semantic error in : ./test-files/analyzer/builtins/error-printf-too-many-args/source.spice:2:5:
Printf arg number not matching template string: The placeholder string contains less placeholders that arguments were passed

2  printf("Test", 3);
   ^^^^^^^^^^^^^^^^^